# eyecatch-end-detector

./: .gitignore  README.md  auto_cut_program.py  pyproject.toml
src/: file.py  metrics.py  movie_iterator.py
src/cli/: get_times.py
tests/: test_files.py  test_movie_iterator.py
