[tool.poetry]
name = "eyecatch-end-detector"
version = "0.1.0"
description = ""
authors = ["YOSHIDA Fumiaki <fumiakiyoshida1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.0"
opencv-python = "^4.12.0.88"
pytest = "^8.4.1"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = ["tests"]
